# nsaddaga.PcoreFitScripts

./: .gitignore  CHANGELOG.md  Makefile  README.md
VegaNotes/backend/: pyproject.toml
VegaNotes/backend/app/: archive_ops.py  auth.py  badges.py  config.py  dashboard.py  db.py  gamify.py  gamify_stats.py  main.py  markdown_ops.py  owner_normalize.py  phonebook.py  phonebook_intel.py  safe_io.py
VegaNotes/backend/app/api/: __init__.py
VegaNotes/backend/app/indexer/: __init__.py
VegaNotes/backend/app/models/: __init__.py
VegaNotes/backend/app/parser/: __init__.py  lexer.py  parser.py  time_parse.py  tokens.py
VegaNotes/backend/data/: phonebook.json
VegaNotes/backend/tests/: conftest.py  test_archive_guards.py  test_archive_schema.py  test_markdown_ops.py  test_safe_io.py  test_watcher.py
VegaNotes/backend/tests/api/: conftest.py  test_api.py  test_archive_endpoints.py  test_archive_project_hidden.py  test_archive_reads.py  test_concurrency.py  test_focus_week.py  test_gamify.py  test_gamify_badges.py  test_gamify_stats.py  test_owner_normalize.py  test_patch_task_links.py  test_patch_task_progress.py  test_phonebook.py  test_phonebook_intel.py  test_progress_history.py  test_query.py  test_rbac_read.py  test_task_uuid.py  test_tasks_progress_filter.py  test_users_project_scope.py  test_v3_api.py
VegaNotes/backend/tests/fixtures/: sprint14.json
VegaNotes/backend/tests/parser/: test_inheritance.py  test_link_tokens.py  test_parser.py  test_progress_token.py
VegaNotes/tools/vn/: README.md  install.sh  pyproject.toml  setup.py
VegaNotes/tools/vn/tests/: conftest.py  test_cli.py
VegaNotes/tools/vn/vn/: __init__.py  (+4 more)
(+274 files in other folders)
