[project]
name = "veganotes-vn"
version = "0.1.0"
description = "vn — terminal CLI wrapper around the VegaNotes REST API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
vn = "vn.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
